removed evething JWT and Spring security related, even for testing. Focus on the Engine.